--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,39 +1,55 @@
 ﻿@model IEnumerable<Weather_App.Models.Weather>
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Weather Index";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Weather App</h1>
-    <p>Latest weather information from the database:</p>
-</div>
+<h1>Weather Data</h1>
 
-@if (Model != null && Model.Any())
-{
-    <table class="table">
-        <thead>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Temperature)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.State)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
             <tr>
-                <th>City</th>
-                <th>Date</th>
-                <th>Temperature</th>
-                <th>State</th>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Temperature)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.State)
+                </td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.City</td>
-                    <td>@item.Date.ToShortDateString()</td>
-                    <td>@item.Temperature</td> <!-- Temperature yazımını kontrol edin -->
-                    <td>@item.State</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-    <p>No weather data available.</p>
-}
+        }
+    </tbody>
+</table>
+
+<p>
+    <a asp-action="UpdateWeatherData">Update Weather Data</a>
+</p>
